# easy-env

./: .completionsr  .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md  idea.md
.agents/skills/testing-easyenv-cli/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/easyenv-cli/: Cargo.toml
crates/easyenv-cli/src/: main.rs  share.rs
crates/easyenv-cli/tests/: cli.rs
crates/easyenv-core/: Cargo.toml
crates/easyenv-core/src/: crypto.rs  domain.rs  dotenv.rs  lib.rs  metadata.rs  paths.rs  service.rs  store.rs
crates/easyenv-keychain/: Cargo.toml
crates/easyenv-keychain/src/: lib.rs
docs/: install.md
scripts/: install.sh
src/: main.rs
tests/: cli.rs
