[package]
name = "easyenv"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "Local-first environment variable manager backed by the OS keychain"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "=1.0.95"
arboard = { version = "=3.4.1", default-features = false }
base64 = "=0.22.1"
clap = { version = "=4.5.27", features = ["derive", "env"] }
clap_complete = "=4.5.42"
dirs = "=6.0.0"
rand = "=0.8.5"
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.138"
shell-escape = "=0.1.5"
time = { version = "=0.3.37", features = ["formatting", "parsing", "serde-human-readable"] }
toml = "=0.8.23"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "=3.6.1", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "=3.6.1", features = ["windows-native"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
keyring = { version = "=3.6.1", features = ["sync-secret-service"] }

[dev-dependencies]
assert_cmd = "=2.0.16"
predicates = "=3.1.3"
tempfile = "=3.16.0"
