[workspace]
members = [
  "crates/easyenv-cli",
  "crates/easyenv-core",
  "crates/easyenv-keychain",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

authors = ["easyenv contributors"]
repository = "https://github.com/pcstyle/easy-env"

[workspace.dependencies]
anyhow = "1"
aes-gcm = "0.10"
assert_cmd = "2"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
directories = "6"
getrandom = "0.3"
hex = "0.4"
keyring = "3"
predicates = "3"
rusqlite = { version = "0.37", features = ["bundled"] }
security-framework = "3"
security-framework-sys = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
