[package]
name = "easyenv"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "easyenv"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true

easyenv-core = { path = "../easyenv-core" }
easyenv-keychain = { path = "../easyenv-keychain" }
age = { version = "0.11", features = ["armor"] }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
